--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "mongodb": "^6.10.0",
-    "mongoose": "^8.8.1",
+    "mongodb": "^6.11.0",
+    "mongoose": "^8.8.3",
     "node": "^18.20.5",
     "rest": "^2.0.0"
   },
@@ -13,9 +13,10 @@
   "description": "\"Rotems and Shons app\"",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
-    "devstart": "nodemon app.js"
+    "test": " tsc && jest --detectOpenHandles --forceExit --coverage",
+    "start": " tsc && node ./dist/app.js",
+    "devstart": "nodemon ./src/app.ts",
+    "lint": "eslint . --ext .ts"
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,20 @@
   },
   "homepage": "https://github.com/Rotems00/As1#readme",
   "devDependencies": {
-    "@types/node": "^22.9.0"
+    "@eslint/js": "^9.16.0",
+    "@types/body-parser": "^1.19.5",
+    "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.9.0",
+    "@types/supertest": "^6.0.2",
+    "eslint": "^9.16.0",
+    "globals": "^15.13.0",
+    "install": "^0.13.0",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.17.0"
   }
 }
