--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "main": "index.js",
   "scripts": {
     "start": "tsc && node ./dist/src/app.js",
-    "testPost": " tsc && jest --detectOpenHandles --forceExit posts.test.ts  --coverage" ,
+    "testPost": " tsc && jest --detectOpenHandles --forceExit posts.test.ts  --coverage",
     "testAuth": "tsc && jest --detectOpenHandles --forceExit auth.test.ts --coverage",
     "testComment": "tsc && jest --detectOpenHandles --forceExit comments.test.ts --coverage",
     "test": " tsc && jest --detectOpenHandles --forceExit --runInBand",
@@ -42,11 +42,15 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.9.0",
     "@types/supertest": "^6.0.2",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.7",
     "eslint": "^9.16.0",
     "globals": "^15.13.0",
     "install": "^0.13.0",
     "jest": "^29.7.0",
     "supertest": "^7.0.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2",
