--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
     "google-auth-library": "^9.15.1",
@@ -23,7 +24,6 @@
     "testAuth": "tsc && jest --detectOpenHandles --forceExit auth.test.ts --coverage",
     "testFile": "tsc && jest --detectOpenHandles --forceExit file.test.ts ",
     "testComment": "tsc && jest --detectOpenHandles --forceExit comments.test.ts --coverage",
-
     "test": " tsc && jest --detectOpenHandles --forceExit --runInBand",
     "devstart": "nodemon ./src/app.ts",
     "lint": "eslint . --ext .ts"
@@ -42,6 +42,7 @@
     "@eslint/js": "^9.16.0",
     "@types/bcrypt": "^5.0.2",
     "@types/body-parser": "^1.19.5",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
