--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "dependencies": {
-    "axios": "^1.7.9",
+    "axios": "^1.8.1",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
+    "fs": "^0.0.1-security",
     "google-auth-library": "^9.15.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.11.0",
     "mongoose": "^8.8.4",
     "multer": "^1.4.5-lts.1",
     "node": "^18.20.5",
+    "path": "^0.12.7",
     "rest": "^2.0.0"
   },
   "name": "ourapp",
@@ -24,7 +26,6 @@
     "testAuth": "tsc && jest --detectOpenHandles --forceExit auth.test.ts ",
     "testFile": "tsc && jest --detectOpenHandles --forceExit file.test.ts ",
     "testComment": "tsc && jest --detectOpenHandles --forceExit comments.test.ts ",
-
     "test": " tsc && jest --detectOpenHandles --forceExit --runInBand",
     "devstart": "nodemon ./src/app.ts",
     "lint": "eslint . --ext .ts"
