--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "main": "index.js",
   "scripts": {
     "start": "tsc && node ./dist/src/app.js",
-    "testPost": " tsc && jest --detectOpenHandles --forceExit posts.test.ts  ",
+    "testPost": " tsc && jest --detectOpenHandles --forceExit posts.test.ts --coverage ",
     "testAuth": "tsc && jest --detectOpenHandles --forceExit auth.test.ts ",
     "testFile": "tsc && jest --detectOpenHandles --forceExit file.test.ts ",
     "testComment": "tsc && jest --detectOpenHandles --forceExit comments.test.ts ",
